# neodict

./: .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  QUICK_PUBLISH.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
docs/: PYPI_PUBLISH.md  QUICKSTART.md
examples/: auto_update.py  basic_usage.py
src/: __init__.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  dictionary.py  storage.py  word.py
src/crawler/: __init__.py  base.py  extractor.py  news.py  wikipedia.py
src/updater/: __init__.py  scheduler.py  updater.py
tests/: test_crawler.py  test_dictionary.py  test_enhancements.py
