[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neodict"
version = "0.1.1"
authors = [
    {name = "NeoDict Contributors", email = "neodict@example.com"},
]
description = "自動更新型日本語新語辞書ライブラリ"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Japanese",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "selenium>=4.15.0",
    "scrapy>=2.11.0",
    "newspaper3k>=0.2.8",
    "mecab-python3>=1.0.6",
    "sudachipy>=0.6.7",
    "janome>=0.5.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/cmc-labo/neodict"
Documentation = "https://github.com/cmc-labo/neodict#readme"
Repository = "https://github.com/cmc-labo/neodict"
Issues = "https://github.com/cmc-labo/neodict/issues"

[project.scripts]
neodict = "cli.commands:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
